--- a/akonadi/contact/contactgroupeditor.ui
+++ b/akonadi/contact/contactgroupeditor.ui
@@ -1,34 +1,35 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ContactGroupEditor</class>
- <widget class="QWidget" name="ContactGroupEditor" >
-  <property name="geometry" >
+ <widget class="QWidget" name="ContactGroupEditor">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>392</width>
+    <height>289</height>
    </rect>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" >
-    <widget class="QLabel" name="groupNameLabel" >
-     <property name="text" >
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="groupNameLabel">
+     <property name="text">
       <string>Name:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1" >
-    <widget class="KLineEdit" name="groupName" />
+   <item row="0" column="1">
+    <widget class="KLineEdit" name="groupName"/>
    </item>
-   <item row="1" column="1" >
-    <spacer name="verticalSpacer" >
-     <property name="orientation" >
+   <item row="1" column="1">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeType" >
+     <property name="sizeType">
       <enum>QSizePolicy::Fixed</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>20</height>
@@ -36,15 +37,25 @@
      </property>
     </spacer>
    </item>
-   <item row="2" column="0" colspan="2" >
-    <widget class="QLabel" name="label" >
-     <property name="text" >
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
       <string>Contact group members:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2" >
-    <widget class="QWidget" native="1" name="memberWidget" />
+   <item row="3" column="0" colspan="2">
+    <widget class="QTreeView" name="membersView">
+     <property name="rootIsDecorated">
+      <bool>false</bool>
+     </property>
+     <property name="itemsExpandable">
+      <bool>false</bool>
+     </property>
+     <property name="allColumnsShowFocus">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
