Add needed customwidgets section, otherwise KComboBox is not filled correctly with predefined items
CCMAIL: winter@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=1044593

--- a/akonadi/contact/kcm/akonadicontactactions.ui
+++ b/akonadi/contact/kcm/akonadicontactactions.ui
@@ -158,6 +158,18 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>KLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>klineedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KComboBox</class>
+   <extends>QComboBox</extends>
+   <header>kcombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
