--- a/mailtransport/smtpsettings.ui
+++ b/mailtransport/smtpsettings.ui
@@ -133,14 +133,29 @@
        <string comment="advanced smtp settings">Advanced</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0" colspan="3">
-        <widget class="QCheckBox" name="kcfg_requiresAuthentication">
+       <item row="1" column="0" colspan="3">
+        <widget class="QLabel" name="noAuthPossible">
+         <property name="visible">
+          <bool>false</bool>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Box</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+         <property name="lineWidth">
+          <number>0</number>
+         </property>
          <property name="text">
-          <string>Server &amp;requires authentication</string>
+          <string>This server does not support authentication</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QLabel" name="usernameLabel">
          <property name="enabled">
           <bool>false</bool>
@@ -156,14 +171,14 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1" colspan="2">
+       <item row="2" column="1" colspan="2">
         <widget class="KLineEdit" name="kcfg_userName">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="passwordLabel">
          <property name="enabled">
           <bool>false</bool>
@@ -179,7 +194,7 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1" colspan="2">
+       <item row="3" column="1" colspan="2">
         <widget class="KLineEdit" name="password">
          <property name="enabled">
           <bool>false</bool>
@@ -192,7 +207,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1" colspan="2">
+       <item row="4" column="1" colspan="2">
         <widget class="QCheckBox" name="kcfg_storePassword">
          <property name="enabled">
           <bool>false</bool>
@@ -202,7 +217,7 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="3">
+       <item row="5" column="0" colspan="3">
         <widget class="KButtonGroup" name="kcfg_authenticationType">
          <property name="enabled">
           <bool>false</bool>
@@ -260,17 +275,17 @@
          </layout>
         </widget>
        </item>
-       <item row="5" column="0" colspan="3">
+       <item row="6" column="0" colspan="3">
         <widget class="KSeparator" name="kseparator_3"/>
        </item>
-       <item row="6" column="0" colspan="3">
+       <item row="7" column="0" colspan="3">
         <widget class="QCheckBox" name="kcfg_specifyHostname">
          <property name="text">
           <string>Sen&amp;d custom hostname to server</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="0" colspan="2">
+       <item row="8" column="0" colspan="2">
         <widget class="QLabel" name="hostnameLabel">
          <property name="enabled">
           <bool>false</bool>
@@ -286,17 +301,17 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="2">
+       <item row="8" column="2">
         <widget class="KLineEdit" name="kcfg_localHostname">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="8" column="0" colspan="3">
+       <item row="9" column="0" colspan="3">
         <widget class="KSeparator" name="kseparator_2"/>
        </item>
-       <item row="9" column="0" colspan="2">
+       <item row="10" column="0" colspan="2">
         <widget class="QLabel" name="precommandLabel">
          <property name="text">
           <string>Precommand:</string>
@@ -306,35 +321,17 @@
          </property>
         </widget>
        </item>
-       <item row="9" column="2">
+       <item row="10" column="2">
         <widget class="KLineEdit" name="kcfg_precommand"/>
        </item>
+       <item row="0" column="0" colspan="3">
+        <widget class="QCheckBox" name="kcfg_requiresAuthentication">
+         <property name="text">
+          <string>Server &amp;requires authentication</string>
+         </property>
+        </widget>
+       </item>
       </layout>
-      <widget class="QLabel" name="noAuthPossible">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>100</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="visible">
-        <bool>false</bool>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Box</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-       <property name="text">
-        <string>This server does not support authentication</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
      </widget>
     </widget>
    </item>
