--- a/mailtransport/smtpsettings.ui
+++ b/mailtransport/smtpsettings.ui
@@ -265,7 +265,7 @@
              </widget>
             </item>
             <item row="2" column="1">
-             <widget class="QComboBox" name="authCombo"/>
+             <widget class="KComboBox" name="authCombo"/>
             </item>
            </layout>
           </item>
@@ -379,6 +379,11 @@
    <class>KIntNumInput</class>
    <extends>QWidget</extends>
    <header>knuminput.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KComboBox</class>
+   <extends>QComboBox</extends>
+   <header>kcombobox.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
