This KButtonGroup is for encryption type, not for auth type.
Now encryption type is stored in config, auth isn't yet but at least isn't stored randomly as CRAM.

svn path=/trunk/KDE/kdepimlibs/; revision=1125763

--- a/mailtransport/smtpsettings.ui
+++ b/mailtransport/smtpsettings.ui
@@ -138,7 +138,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_7">
        <item>
-        <widget class="KButtonGroup" name="kcfg_authenticationType">
+        <widget class="KButtonGroup" name="kcfg_encryption">
          <property name="enabled">
           <bool>true</bool>
          </property>
