--- a/mailtransport/sendmailsettings.ui
+++ b/mailtransport/sendmailsettings.ui
@@ -25,7 +25,7 @@
    <item row="0" column="1">
     <widget class="KUrlRequester" name="kcfg_host">
      <property name="kcfg_property" stdset="0">
-      <string>text</string>
+      <cstring>text</cstring>
      </property>
     </widget>
    </item>
