--- a/akonadi/cachepolicypage.ui
+++ b/akonadi/cachepolicypage.ui
@@ -1,10 +1,11 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>CachePolicyPage</class>
- <widget class="QWidget" name="CachePolicyPage" >
-  <property name="enabled" >
+ <widget class="QWidget" name="CachePolicyPage">
+  <property name="enabled">
    <bool>true</bool>
   </property>
-  <property name="geometry" >
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -12,78 +13,78 @@
     <height>461</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QCheckBox" name="inherit" >
-     <property name="text" >
+    <widget class="QCheckBox" name="inherit">
+     <property name="text">
       <string>Inherit cache policy from parent</string>
      </property>
-     <property name="checked" >
+     <property name="checked">
       <bool>true</bool>
      </property>
-     <property name="tristate" >
+     <property name="tristate">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="enabled" >
+    <widget class="QGroupBox" name="groupBox">
+     <property name="enabled">
       <bool>false</bool>
      </property>
-     <property name="title" >
+     <property name="title">
       <string>Cache Policy</string>
      </property>
-     <layout class="QGridLayout" >
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label_2" >
-        <property name="text" >
+     <layout class="QGridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
          <string>Interval check time:</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1" >
-       <widget class="KIntNumInput" name="checkInterval" >
-        <property name="value" >
-         <number>-1</number>
-        </property>
-        <property name="minimum" >
+      <item row="0" column="1">
+       <widget class="KIntNumInput" name="checkInterval">
+        <property name="value">
          <number>0</number>
         </property>
-        <property name="suffix" >
+        <property name="minimum">
+         <number>0</number>
+        </property>
+        <property name="suffix">
          <string>minutes</string>
         </property>
-        <property name="specialValueText" >
+        <property name="specialValueText">
          <string comment="never check the cache">Never</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
          <string>Local cache timeout:</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1" >
-       <widget class="KIntNumInput" name="localCacheTimeout" >
-        <property name="value" >
-         <number>-1</number>
-        </property>
-        <property name="minimum" >
+      <item row="1" column="1">
+       <widget class="KIntNumInput" name="localCacheTimeout">
+        <property name="value">
          <number>0</number>
         </property>
-        <property name="suffix" >
+        <property name="minimum">
+         <number>0</number>
+        </property>
+        <property name="suffix">
          <string>minutes</string>
         </property>
-        <property name="specialValueText" >
+        <property name="specialValueText">
          <string comment="no cache timeout">Never</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="2" >
-       <widget class="QCheckBox" name="syncOnDemand" >
-        <property name="text" >
+      <item row="2" column="0" colspan="2">
+       <widget class="QCheckBox" name="syncOnDemand">
+        <property name="text">
          <string>Synchronize on demand</string>
         </property>
        </widget>
@@ -92,30 +93,39 @@
     </widget>
    </item>
    <item>
-    <widget class="KEditListBox" name="localParts" >
-     <property name="enabled" >
-      <bool>false</bool>
-     </property>
-     <property name="title" >
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
       <string>Locally Cached Parts</string>
      </property>
-     <property name="buttons" >
-      <set>KEditListBox::Add|KEditListBox::Remove</set>
-     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="KEditListWidget" name="localParts">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="buttons">
+         <set>KEditListWidget::Add|KEditListWidget::Remove</set>
+        </property>
+        <property name="title" stdset="0">
+         <string>Locally Cached Parts</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>KEditListBox</class>
-   <extends>QGroupBox</extends>
-   <header>keditlistbox.h</header>
-  </customwidget>
-  <customwidget>
    <class>KIntNumInput</class>
    <extends>QWidget</extends>
    <header>knuminput.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KEditListWidget</class>
+   <extends>QWidget</extends>
+   <header>keditlistwidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
@@ -126,11 +136,11 @@
    <receiver>groupBox</receiver>
    <slot>setDisabled(bool)</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>65</x>
      <y>20</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>71</x>
      <y>39</y>
     </hint>
@@ -142,11 +152,11 @@
    <receiver>localParts</receiver>
    <slot>setDisabled(bool)</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>199</x>
      <y>14</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>321</x>
      <y>192</y>
     </hint>
