--- a/akonadi/erroroverlay.ui
+++ b/akonadi/erroroverlay.ui
@@ -121,7 +121,7 @@
        <string>The Akonadi personal information management framework is not operational.
 Click on &quot;Details...&quot; to obtain detailed information on this problem.</string>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
+      <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
         <spacer name="verticalSpacer_5">
          <property name="orientation">
@@ -174,17 +174,24 @@ Click on &quot;Details...&quot; to obtain detailed information on this problem.<
           </spacer>
          </item>
          <item>
-          <widget class="KPushButton" name="selfTestButton">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>Details...</string>
-           </property>
-          </widget>
+          <layout class="QVBoxLayout" name="verticalLayout_4">
+           <item>
+            <widget class="KPushButton" name="selfTestButton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Details...</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="KPushButton" name="detailsQuitButton"/>
+           </item>
+          </layout>
          </item>
          <item>
           <spacer name="horizontalSpacer_4">
