--- a/akonadi/cachepolicypage.ui
+++ b/akonadi/cachepolicypage.ui
@@ -144,7 +144,7 @@
                <string>minutes</string>
               </property>
               <property name="specialValueText" stdset="0">
-               <string comment="no cache timeout">Never</string>
+               <string comment="no cache timeout">Forever</string>
               </property>
              </widget>
             </item>
